# Simple-RayTracer

./: .gitignore  CMakeLists.txt  README.md
include/: camera.hxx  dielectric.hxx  hitable.h  hitableList.hxx  lambertian.hxx  metal.hxx  other.h  ray.hxx  sphere.hxx  vec3.hxx
src/: 10_PositionableCamera.cpp  10_PositionableCamera_2.cpp  11_DefocusBlur.cpp  12_TheNext.cpp  1_OutputAnImage.cpp  2_TheVec3Class.cpp  3_RaysAndCamera.cpp  4_Sphere.cpp  5_MultipleObjects.cpp  5_SurfaceNormal.cpp  6_Antialiasing.cpp  7_DiffuseMaterial.cpp  8_MetalMaterial.cpp  9_Dielectrics.cpp  9_DielectricsWithTotalReflect.cpp  other.cxx
temp/: out.ppm
